--- a/src/components/CkFilter/index.less
+++ b/src/components/CkFilter/index.less
@@ -4,8 +4,39 @@
   font-size: 12px;
   gap: 8px;
 
+  // 自定义筛选
+  .filter_custom {
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 24px;
+    min-width: 100px;
+    border: 1px solid var(--box-shadow-color);
+    border-radius: 2px;
+    color: var(--font2-color);
+    padding: 0 8px;
+    cursor: pointer;
+    transition: .3s;
+
+    .custom_label {
+      padding-right: 16px;
+    }
+
+    &:hover {
+      border-color: var(--primary-color);
+    }
+
+    &.active {
+      color: var(--text-color);
+    }
+  }
+
   .filter_search {
     max-width: 140px;
+
+    .ant-input-group {
+      line-height: 1;
+    }
 
     input {
       font-size: 12px;
@@ -181,55 +212,58 @@
     .filter_body {
       width: 100%;
 
-      .filter_list {
+      .virtual_list {
         min-width: 160px;
         max-height: 224px;
         overflow: auto;
+      }
 
+      .filter_item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 12px;
+        height: 32px;
+        min-width: 120px;
+        padding: 0 8px;
+        transition: .3s;
+        white-space: nowrap;
+        cursor: pointer;
 
-        .filter_item {
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          font-size: 12px;
-          height: 32px;
-          min-width: 120px;
-          padding: 0 8px;
-          transition: .3s;
-          white-space: nowrap;
-          cursor: pointer;
+        &.add_more {
+          border-top: 1px solid var(--stripe-color);
+        }
 
-          .filter_item_content {
-            flex: auto;
-          }
+        .filter_item_content {
+          flex: auto;
+        }
 
-          .filter_item_operate {
-            .icon_top {
-              font-size: 16px;
-              color: #8C8C8C;
-              transition: .3s;
-              opacity: 0;
+        .filter_item_operate {
+          .hover_show {
+            font-size: 16px;
+            color: #8C8C8C;
+            transition: .3s;
+            opacity: 0;
 
-              &:hover {
-                color: var(--primary-color);
-              }
+            &:hover {
+              color: var(--primary-color);
             }
           }
+        }
 
-          &[disabled] {
-            display: none;
-          }
+        &[disabled] {
+          display: none;
+        }
 
-          &.checked {
-            background-color: var(--primary2-color);
-          }
+        &.checked {
+          background-color: var(--primary2-color);
+        }
 
-          &:hover {
-            background-color: var(--stripe-color);
+        &:hover {
+          background-color: var(--stripe-color);
 
-            .filter_item_operate .icon_top {
-              opacity: 1;
-            }
+          .filter_item_operate .icon_top {
+            opacity: 1;
           }
         }
       }
@@ -285,6 +319,175 @@
       .ant-checkbox {
         top: initial;
       }
+    }
+  }
+}
+
+// 抽屉组件样式
+.ant-drawer {
+  .ant-drawer-header {
+    height: 48px;
+    line-height: 1;
+    padding: 0 24px;
+
+    .ant-drawer-title {
+      font-size: 14px;
+    }
+
+    .ant-drawer-extra {
+      button {
+        font-size: 12px;
+      }
+    }
+  }
+
+  &.filter_drawer {
+    .filter_drawer_group {
+      font-size: 12px;
+      line-height: 1;
+      margin-bottom: 24px;
+
+      .filter_drawer_group_title {
+        font-size: 12px;
+        padding-bottom: 8px;
+
+        span.required {
+          color: #fd4d4e;
+        }
+      }
+
+      input {
+        font-size: 12px;
+      }
+
+      // 单选按钮
+      .ant-radio-wrapper {
+        display: inline-flex;
+        align-items: center;
+        font-size: 12px;
+
+        .ant-radio {
+          top: 0;
+        }
+      }
+    }
+
+    .filter_drawer_group_add {
+      .ant-btn {
+        font-size: 12px;
+      }
+    }
+
+    .filter_drawer_group_list {
+      .filter_drawer_group_item {
+        margin-top: var(--gap);
+
+        .item_box {
+          border: 1px dashed transparent;
+          background: var(--background-color);
+          padding: calc(var(--gap) * 2);
+          cursor: pointer;
+          transition: .3s;
+
+          &:hover {
+            border-color: var(--primary-color);
+          }
+
+          .item_header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            .item_header_title {
+              font-weight: 500;
+            }
+
+            .item_header_icon {
+              font-size: 16px;
+              color: #8C8C8C;
+              transition: .3s;
+
+              &:hover {
+                color: var(--font-color);
+              }
+            }
+          }
+
+          .item_tags {
+            padding-top: 12px;
+
+            .ant-tag {
+              color: var(--font-color);
+              background-color: var(--background-color);
+
+              &.site-tag-plus {
+                background: transparent;
+                border-style: dashed;
+                cursor: pointer;
+              }
+            }
+
+            .tag-input {
+              width: 78px;
+              margin-right: 8px;
+              vertical-align: top;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+// 模态弹窗
+.ant-modal {
+  .custom_modal {
+    .checkbox_tag {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 12px;
+      height: 24px;
+      border-radius: 2px;
+      color: var(--font-color);
+      background-color: var(--stripe-color);
+      padding: 0 8px;
+      transition: .3s;
+      cursor: pointer;
+
+      &:hover,
+      &.active {
+        color: #fff;
+        background-color: var(--primary-color);
+      }
+    }
+
+    .ant-form-item {
+      margin-bottom: 16px;
+
+      .ant-form-item-label>label {
+        font-size: 12px;
+      }
+    }
+
+    .auto_height {
+      max-height: 418px;
+      overflow-y: auto;
+    }
+
+    // 单选按钮
+    .ant-radio-wrapper {
+      display: inline-flex;
+      align-items: center;
+      font-size: 12px;
+
+      .ant-radio {
+        top: 0;
+      }
+    }
+
+    .ant-select {
+      font-size: 12px;
     }
   }
 }
