修改一级筛选

--- a/src/components/CkFilter/index.less
+++ b/src/components/CkFilter/index.less
@@ -345,14 +345,16 @@
     .filter_drawer_group {
       font-size: 12px;
       line-height: 1;
-      margin-bottom: 24px;
 
-      .filter_drawer_group_title {
-        font-size: 12px;
-        padding-bottom: 8px;
+      .ant-form-item {
+        margin-bottom: 16px;
+      }
 
-        span.required {
-          color: #fd4d4e;
+      .ant-form-item-label {
+        padding-bottom: 0;
+
+        label {
+          font-size: 12px;
         }
       }
 
@@ -373,6 +375,8 @@
     }
 
     .filter_drawer_group_add {
+      padding-top: 8px;
+
       .ant-btn {
         font-size: 12px;
       }
